# Agentic-OS

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json
.github/workflows/: ci.yml
app/: layout.tsx  page.tsx
docs/: README.md
lib/agents/: types.ts
requirements/: base.txt  dev.txt  test.txt
src/app/: layout.tsx
src/capabilities/: network.py
src/components/agents/: agent-selector.tsx  create-agent.tsx
src/components/chat/: chat-container.tsx  chat-input.tsx  message.tsx
src/components/layout/: sidebar.tsx
src/components/providers/: index.tsx
src/components/settings/: llm-settings.tsx
src/core/: agent.py  capabilities.py  coordination.py  knowledge_base.py  team.py
src/types/: llm.ts
src/utils/: system_monitor.py
tests/: conftest.py
